--- a/src/main/resources/templates/accreditamento/accreditamentoShowAll.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShowAll.html
@@ -15,7 +15,7 @@
 						<h2 style="display: inline" th:text="#{label.info_provider}">label.info_provider</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.provider != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.provider != null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -30,7 +30,7 @@
 						<h2 style="display: inline" th:text="#{label.sede_legale}">label.sede_legale</h2>
 						<h2 style="display: inline" th:if="${accreditamentoWrapper.sedeLegale.new}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${accreditamentoWrapper.sedeLegale.new}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -45,7 +45,7 @@
 						<h2 style="display: inline" th:text="#{label.sede_operativa}">label.sede_operativa</h2>
 						<h2 style="display: inline" th:if="${accreditamentoWrapper.sedeOperativa.new}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${accreditamentoWrapper.sedeOperativa.new}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -60,7 +60,7 @@
 						<h2 style="display: inline" th:text="#{label.legale_rappresentante}">label.legale_rappresentante</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.legaleRappresentante != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.legaleRappresentante != null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -75,7 +75,7 @@
 						<h2 style="display: inline" th:text="#{label.delegato_legale_rappresentante}">label.delegato_legale_rappresentante</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.delegatoLegaleRappresentante != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -90,7 +90,7 @@
 						<h2 style="display: inline" th:text="#{label.dati_accreditamento}">label.dati_accreditamento</h2>
 						<h2 style="display: inline" th:if="${accreditamentoWrapper.datiAccreditamento.new}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${accreditamentoWrapper.datiAccreditamento.new}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -105,7 +105,7 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_segreteria}">label.responsabile_segreteria</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileSegreteria != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileSegreteria != null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -119,7 +119,7 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_amministrativo}">label.responsabile_amministrativo</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileAmministrativo != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileAmministrativo != null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -134,7 +134,7 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_sistema_informatico}">label.responsabile_sistema_informatico</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileSistemaInformatico != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileSistemaInformatico != null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -149,7 +149,7 @@
 						<h2 style="display: inline" th:text="#{label.responsabile_qualita}">label.responsabile_qualita</h2>
 						<h2 style="display: inline" th:unless="${accreditamentoWrapper.responsabileQualita != null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:if="${accreditamentoWrapper.responsabileQualita != null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -164,7 +164,7 @@
 						<h2 style="display: inline" th:text="#{label.componenti_comitato_scientifico}">label.componenti_comitato_scientifico</h2>
 						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico) and accreditamentoWrapper.coordinatoreComitatoScientifico == null}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico) and accreditamentoWrapper.coordinatoreComitatoScientifico == null}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -187,7 +187,7 @@
               		<div class="x_title">
 						<h2 style="display: inline" th:text="#{label.allegati}">label.allegati</h2>
 						<ul class="nav navbar-right panel_toolbox">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -202,7 +202,7 @@
 						<h2 style="display: inline" th:text="#{label.eventi_piano_formativo}">label.eventi_piano_formativo</h2>
 						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
 						<ul class="nav navbar-right panel_toolbox" th:unless="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}">
-		                    <li><a class="link-collapse"><i class="fa fa-chevron-down"></i></a></li>
+		                    <li><a class="link-collapse"><i class="fa iconToggle fa-chevron-down"></i></a></li>
                   		</ul>
 						<div class="clearfix"></div>
 					</div>
@@ -341,6 +341,12 @@
 					$(this).children().toggleClass("fa-chevron-down fa-chevron-up");
 					$(this).parents(".x_title").siblings(".container-collapse").slideToggle("slow");
 				});
+
+				function toggleAll() {
+					$('.iconToggle').toggleClass("fa-chevron-down fa-chevron-up");
+					$(".container-collapse").slideToggle("slow");
+					$('.toggleButtons').toggle();
+				}
 
 			/*]]>*/
 			</script>
