--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -35,7 +35,7 @@
 				</div>
 
 				<div class="x_panel">
-					<div class="x_title">
+					<div class="x_title x_menu">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
