--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -118,7 +118,7 @@
 				</div>
 
 				<div class="x_panel">
-					<div class="x_title">
+					<div class="x_title x_menu">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
 							<button th:if="${accreditamentoWrapper.canConfermaValutazione}" type="button" class="btn btn-success pull-right"
