Cambiato checkbox hasPartitaIVA con radio e sistemato relativi metodi JS

--- a/src/main/resources/templates/provider/providerEdit.html
+++ b/src/main/resources/templates/provider/providerEdit.html
@@ -32,7 +32,7 @@
 			    		.prop('required', true)
 			   	});
 
-			   	$('#hasPartitaIVA').on('ifUnchecked', function() {
+			   	$('#hasNotPartitaIVA').on('ifChecked', function() {
 			   		$('#partitaIva').prop('disabled', true)
 			   			.prop('required', false)
 			   			.val('')
