--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -137,13 +137,22 @@
 						<div th:if="${valutabile}" class="divider"></div>
 
 						<!-- FLAG PARTITA IVA -->
-						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:if="${editabile}">
-							<label class="control-label col-md-4 col-sm-4 col-xs-12" for="hasPartitaIVA">
+						<div class="item form-group" th:if="${editabile}">
+							<label class="control-label col-md-4 col-sm-4 col-xs-12">
 								<span th:text="#{label.ha_partita_IVA}">Sei titolare di Partita IVA?</span>
 							</label>
 							<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-								<div class="checkbox">
-									<input id="hasPartitaIVA" name="hasPartitaIVA" class="flat" type="checkbox" th:disabled="${!#lists.contains(providerWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva'))}" th:field="${providerWrapper.provider.hasPartitaIVA}" />
+								<div class="radio">
+									<label th:class="${!#lists.contains(providerWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')) ? 'label-disabled' : ''}">
+										<input id="hasPartitaIVA" type="radio" class="flat" name="hasPartitaIVARadio" th:field="${providerWrapper.provider.hasPartitaIVA}" th:value="true" th:disabled="${!#lists.contains(providerWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva'))}"/>
+										<span th:text="#{label.sì}">Sì</span>
+									</label>
+								</div>
+								<div class="radio">
+									<label th:class="${!#lists.contains(providerWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')) ? 'label-disabled' : ''}">
+										<input id="hasNotPartitaIVA" type="radio" class="flat" name="hasPartitaIVARadio" th:field="${providerWrapper.provider.hasPartitaIVA}" th:value="false" th:disabled="${!#lists.contains(providerWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva'))}"/>
+										<span th:text="#{label.no}">No</span>
+									</label>
 								</div>
 							</div>
 						</div>
